[package]
name = "shadow_company_tools"
version = "0.1.0"
edition = "2021"

[features]
configs = []

[dependencies]
bitflags = "2.6"
byteorder = "1.5"
glam = "0.29"
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "jpeg",
] }
thiserror = "2.0"

[workspace]
members = [
    ".",
    "configs",
    "derive",
    "tools/bmf",
    "tools/campaigns",
    "tools/gut",
    "tools/hash",
    "tools/image_defs",
    "tools/map",
    "tools/raw2png",
    "tools/smf",
    "tools/smf2gltf",
]
