[package]
name = "shadow_company_tools"
version = "0.1.0"
edition = "2021"

[features]
configs = []

[dependencies]
bytemuck = { version = "1.20.0", default-features = false }
bitflags = "2.8"
byteorder = "1.5"
glam = { version = "0.30", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = [
    "bmp",
    "jpeg",
] }
thiserror = "2.0"

[workspace]
members = [
    ".",
    "configs",
    "derive",
    "tools/bmf",
    "tools/bmf2gltf",
    "tools/campaigns",
    "tools/gut",
    "tools/hash",
    "tools/image_defs",
    "tools/map",
    "tools/raw2png",
    "tools/smf",
    "tools/smf2gltf",
]
