[package]
name = "bmf2gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bytemuck = { version = "1.21.0", default-features = false, features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
gltf-json = { version = "1.4", features = ["extras", "names"] }
shadow_company_tools = { path = "../.." }
