[package]
name = "smf2uegltf"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bytemuck = { version = "1.21.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
gltf-json = { version = "1.4", features = ["extras", "names"] }
image = { version = "0.25.0", default-features = false, features = [
    "bmp",
    "jpeg",
    "png",
    "webp",
] }
pathdiff = "0.2.1"
shadow_company_tools = { path = "../.." }
walkdir.workspace = true
